--- a/client/src/components/game.css
+++ b/client/src/components/game.css
@@ -1,3 +1,9 @@
 .hspacing{
     padding: 5px;
 }
+.center{
+    position: absolute;
+    top:40%;
+    left:50%;
+    transform: translate(-50%,-50%);
+}
