--- a/client/src/components/game.css
+++ b/client/src/components/game.css
@@ -3,7 +3,9 @@
 }
 .center{
     position: absolute;
-    top:40%;
+    top:45%;
     left:50%;
     transform: translate(-50%,-50%);
+    margin: 0px;
+    padding: 0px;
 }
