--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,3 +42,21 @@
   text-shadow: .75px .5px 14px rgb(197, 205, 211) ;
   transition: ease .55s;
 }
+
+.restartBtn{
+  background-color: rgba(0, 221, 255, 0.541);
+    position: relative;
+    top:0%;
+    left:0%;
+    margin: 0px;
+    padding: 0px;
+    width: 100%;
+    font-weight: bolder;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+}
+
+.restartBtn:hover{
+  background-color: rgba(130, 228, 245, 0.541);
+  text-shadow: .75px .5px 14px rgb(197, 205, 211) ;
+  transition: ease .55s;
+}
