--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,17 @@
+:root {
+  --button-location: 0px;
+}
+
 .App {
+  overflow: scroll;
+  min-height: 1000px;
+  min-width: 1000px;
+}
+.Changed-features {
   text-align: center;
   align-content: center;
   align-items: center;
+  justify-content: center;
 }
 
 .App-header {
@@ -14,49 +24,51 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-.buttonContainer{
-  position: absolute;
-  top:70%;
-  left:50%;
-  transform: translate(-50%,-50%);
+.buttonContainer {
+  position: relative;
+  top: 120%;
+  left: 50%;
+  transform: translate(-50%, 130%);
   display: inline-flexbox;
   width: 100%;
 }
-.startBtn{
+.startBtn {
   color: white;
   background-color: black;
-  height: 100px;
+  height: 15%;
   width: 215px;
   border: white solid;
   border-radius: 15px;
   font-size: x-large;
-  text-shadow: .75px .5px 14px aliceblue ;
+  text-shadow: 0.75px 0.5px 14px aliceblue;
   box-shadow: 5px 5px 24px;
   position: relative;
-  font-weight:bold;
-  transition: ease .55s;
+  top: 85%;
+  font-weight: bold;
+  transition: ease 0.55s;
   margin: 5px;
 }
-.startBtn:hover{
+.startBtn:hover {
   background-color: rgba(0, 0, 0, 0.541);
-  text-shadow: .75px .5px 14px rgb(197, 205, 211) ;
-  transition: ease .55s;
+  text-shadow: 0.75px 0.5px 14px rgb(197, 205, 211);
+  transition: ease 0.55s;
 }
 
-.restartBtn{
-  background-color: rgba(0, 221, 255, 0.541);
-    position: relative;
-    top:0%;
-    left:0%;
-    margin: 0px;
-    padding: 0px;
-    width: 100%;
-    font-weight: bolder;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+.restartBtn {
+  background-color: rgba(0, 221, 255, 1);
+  position: sticky;
+  top: 0%;
+  right: var(--button-location);
+  margin: 0px;
+  padding: 0px;
+  width: 100px;
+  height: 60px;
+  font-weight: bolder;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
-.restartBtn:hover{
-  background-color: rgba(130, 228, 245, 0.541);
-  text-shadow: .75px .5px 14px rgb(197, 205, 211) ;
-  transition: ease .55s;
+.restartBtn:hover {
+  background-color: rgba(130, 228, 245, 1);
+  text-shadow: 0.75px 0.5px 14px rgb(197, 205, 211);
+  transition: ease 0.55s;
 }
