--- a/client/src/components/game.css
+++ b/client/src/components/game.css
@@ -1,11 +1,11 @@
-.hspacing{
-    padding: 5px;
+.hspacing {
+  padding: 5px;
 }
-.center{
-    position: absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50%,-50%);
-    margin: 0px;
-    padding: 0px;
+.center {
+  position: relative;
+  top: 580px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 5px;
+  padding: 2px;
 }
